# ctnet-conceptual-babel

./: .gitignore  CODEX_HANDOFF.md  README.md  REPO_NEXT_STEPS.md  demo_chat.py  demo_output.txt  pyproject.toml  test_conceptual_babel.py  test_real_babel_generator.py
ctnet_conceptual_babel/: __init__.py  runtime.py  surface.py
ctnet_conceptual_babel/charts/: text.py
ctnet_conceptual_babel/core/: coherence.py  complex.py  relation.py
ctnet_conceptual_babel_repo_ready/ctnet_conceptual_babel/: Makefile  README.md  ctnet_conceptual_babel.py  demo_chat.py  runtime_state.json  test_conceptual_babel.py
ctnet_conceptual_babel_repo_ready/ctnet_conceptual_babel/ctnet_conceptual_babel/: __init__.py  runtime.py
ctnet_conceptual_babel_repo_ready/ctnet_conceptual_babel/ctnet_conceptual_babel/charts/: text.py
ctnet_conceptual_babel_repo_ready/ctnet_conceptual_babel/ctnet_conceptual_babel/core/: coherence.py  complex.py  node.py  relation.py  up.py
